<resources>
    <string name="app_name">Praktikum Challenge</string>
    <!--    <string name="find_your_best_shoes_here">%1$s</string>-->
    <string name="find_your_best_shoes_here">fadhilhan01@gmail.com</string>
    <string name="popular_product">Popular Product</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="want_to_see_people_behind_it">Want to see people behind it?</string>
    <string name="about_us">About us</string>
    <string name="price_starts_from">Price starts from</string>
    <string name="description">Description</string>
    <string name="add_to_cart">add to cart</string>
    <string name="hallo_username">Hello</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>