<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#1F1D2B"
    android:paddingTop="30dp"
    tools:context=".HomeActivity"
    android:paddingHorizontal="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/greeting_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/hallo_username"
            android:textColor="#F1F0F2"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_semibold" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:textColor="#6C5ECF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_your_best_shoes_here"
            android:textColor="#504F5E"
            app:layout_constraintTop_toBottomOf="@id/greeting_name"
            app:layout_constraintStart_toStartOf="@id/greeting_name"
            android:fontFamily="@font/poppins_medium"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/email_display"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/popular_recyclerview"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/txt_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/want_to_see_people_behind_it"
                android:textColor="#504F5E"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/about_us_click"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/about_us"
                android:textColor="#6C5ECF"
                android:layout_marginStart="5dp"
                android:textSize="12sp"
                android:clickable="true"
                android:fontFamily="@font/poppins_medium"
                android:focusable="true" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>