<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <ImageView
        android:id="@+id/shoes_detail_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/shoes_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/shoes_detail_img"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:textColor="#F1F0F2"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/shoes_detail_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="#999999"
        app:layout_constraintTop_toBottomOf="@+id/shoes_detail_title"
        app:layout_constraintStart_toStartOf="@+id/shoes_detail_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/price_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_column"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/shoes_detail_type"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/price_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/price_starts_from"
            android:textColor="#F1F0F2"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/shoes_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/price_start"
            app:layout_constraintBottom_toBottomOf="@id/price_start"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#2C96F1"
            android:fontFamily="@font/poppins_semibold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="#F1F0F2"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/price_detail"
        app:layout_constraintTop_toBottomOf="@+id/price_detail"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/shoes_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#504F5E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/btn_add_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_column"
        android:theme="@style/Button.color"
        android:text="@string/add_to_cart" />

</androidx.constraintlayout.widget.ConstraintLayout>